syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "QuestionAnswerAPI.Protos";

service QnAService {
  rpc GetQnA (QuestionDTO) returns (QnADTO);
  rpc AddQnA (QnADTO) returns (google.protobuf.Empty);
}

message QuestionDTO {
  string question = 1;
}

message QnADTO {
  string question = 1;
  string answer = 2;
  repeated float embeddings = 3;
}
